--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,17 +1,9 @@
 
-        <!-- <form #form="ngForm" (ngSubmit)="onClickSubmit(form.value)">
-        <div *ngFor="let info of formInfo.formControlDetails" class="form-group" >
-                <label for="{{info.id}}">{{info.id}}</label>
-                <input type="{{info.type}}" name="{{info.name}}" id="{{info.id}}" class="form-control" *ngIf="{{info.name}}==password" ngModel>
-        </div>
-        <div class="form-group">
-                <input type="submit" class="btn btn-outline-primary" value="{{formInfo.buttonName}}">
-        </div>
-        </form> -->
-        <form (ngSubmit)="loginUser()" [formGroup]="loginForm" novalidate class="form">
-                <input formControlName="email" type="text" class="form-control" placeholder="enter your email">
-                <input formControlName="password" type="password" class="form-control" placeholder="enter your password">
-                <button [disabled]='loginForm.invalid' class="btn btn-outline-primary">login</button>
-        </form>
-        {{loginForm.value |json}}
-        {{loginForm.status | json}}
+<form (ngSubmit)="onClickSubmit(formInit)" [formGroup]="formInit" novalidate class="form">
+  <div  *ngFor="let form_elem of formTemplate">
+    <label for="{{form_elem.id}}">{{form_elem.id}}</label>
+    <input formControlName="{{form_elem.name}}" type="{{form_elem.type}}" class="form-control" id="{{form_elem.id}}" value="{{form_elem.value}}">
+  </div>
+<br>
+<input class="btn btn-outline-primary" value="{{button}}" type="submit"/>
+</form> 
