--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 .container{
       width:300px;
-      height:280px;
+      /* height:280px; */
       position: fixed;
       top: 50%;
       left: 50%;
